// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packer Lerna should aggregate any analytics 1`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsubsub",
        "private": false,
        "version": "0.1.3",
      },
    ],
    "peer": Object {
      "ansi-styles": "4.0.0",
      "debug": "*",
      "smallest": "1.0.1",
      "supports-color": "7.0.0",
    },
  },
  "graph": Object {
    "@fixture/main": Object {
      "external": Object {
        "ansi-styles": "4.0.0",
        "debug": "*",
        "smallest": "1.0.1",
        "supports-color": "7.0.0",
      },
      "internal": Object {
        "@fixture/subsub": "0.1.3",
        "@fixture/subsubsub": "0.1.3",
      },
    },
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
    "@fixture/subsub": Object {
      "debug": "*",
    },
    "@fixture/subsubsub": Object {
      "ansi-styles": "4.0.0",
      "supports-color": "7.0.0",
    },
  },
  "integrity": "8a42b2c1e3bb5a198e6b88e0631c105ad7cf0fd1038e3ac1dd6a744ff5c1800c",
}
`;

exports[`Packer Lerna should generate a hash for the packed bundle 1`] = `"428f6dc1324284aa66c723e6c962e58c4658a3d0de0d077492ca1945179a37a0"`;

exports[`Packer Lerna should generate a monopacker.analytics.json file 1`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsubsub",
        "private": false,
        "version": "0.1.3",
      },
    ],
    "peer": Object {
      "ansi-styles": "4.0.0",
      "debug": "*",
      "smallest": "1.0.1",
      "supports-color": "7.0.0",
    },
  },
  "graph": Object {
    "@fixture/main": Object {
      "external": Object {
        "ansi-styles": "4.0.0",
        "debug": "*",
        "smallest": "1.0.1",
        "supports-color": "7.0.0",
      },
      "internal": Object {
        "@fixture/subsub": "0.1.3",
        "@fixture/subsubsub": "0.1.3",
      },
    },
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
    "@fixture/subsub": Object {
      "debug": "*",
    },
    "@fixture/subsubsub": Object {
      "ansi-styles": "4.0.0",
      "supports-color": "7.0.0",
    },
  },
  "integrity": "8a42b2c1e3bb5a198e6b88e0631c105ad7cf0fd1038e3ac1dd6a744ff5c1800c",
}
`;

exports[`Packer Lerna should generate a monopacker.analytics.json file 2`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsubsub",
        "private": false,
        "version": "0.1.3",
      },
    ],
    "peer": Object {
      "ansi-styles": "4.0.0",
      "debug": "*",
      "smallest": "1.0.1",
      "supports-color": "7.0.0",
    },
  },
  "graph": Object {
    "@fixture/main": Object {
      "external": Object {
        "ansi-styles": "4.0.0",
        "debug": "*",
        "smallest": "1.0.1",
        "supports-color": "7.0.0",
      },
      "internal": Object {
        "@fixture/subsub": "0.1.3",
        "@fixture/subsubsub": "0.1.3",
      },
    },
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
    "@fixture/subsub": Object {
      "debug": "*",
    },
    "@fixture/subsubsub": Object {
      "ansi-styles": "4.0.0",
      "supports-color": "7.0.0",
    },
  },
  "integrity": "8a42b2c1e3bb5a198e6b88e0631c105ad7cf0fd1038e3ac1dd6a744ff5c1800c",
}
`;

exports[`Packer Lerna should generate an artificial package correctly 1`] = `
Object {
  "dependencies": Object {
    "ansi-styles": "4.0.0",
    "debug": "*",
    "smallest": "1.0.1",
    "supports-color": "7.0.0",
  },
  "description": "",
  "monopacker": Object {
    "hash": "428f6dc1324284aa66c723e6c962e58c4658a3d0de0d077492ca1945179a37a0",
    "linked": Object {
      "@fixture/sub": "0.1.3",
      "@fixture/subsub": "0.1.3",
      "@fixture/subsubsub": "0.1.3",
    },
    "version": "1",
  },
  "name": "@fixture/main-packed",
  "version": "0.2.7",
}
`;

exports[`Packer Lerna should generate correct metadata for the packed bundle 1`] = `
Object {
  "hash": "428f6dc1324284aa66c723e6c962e58c4658a3d0de0d077492ca1945179a37a0",
  "linked": Object {
    "@fixture/sub": "0.1.3",
    "@fixture/subsub": "0.1.3",
    "@fixture/subsubsub": "0.1.3",
  },
  "version": "1",
}
`;
